# Zim-viewer

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
static/: index.html  viewer.html
