[package]
name = "Zim-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
anyhow = "1.0.98"
indicatif = "0.18.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tempfile = "3"
zim-rs = { path = "zim-rs" }
