[package]
name = "Zim-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.2"
actix-multipart = "0.7.2"
async-stream = "0.3.6"
anyhow = "1.0.98"
# derive_more = "2.0.1"
# env_logger = "0.11"
# futures = "0.3.31"
futures-util = "0.3"
hash = "0.3.0"
hex = "0.4.3"
html-escape = "0.2"
indicatif = "0.18.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tempfile = "3"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
urlencoding = "2.1"
uuid = { version = "1.17", features = ["v4"] }
zim-rs = { path = "zim-rs" }
